[tool.poetry]
name = "fvm"
version = "0.1.0"
description = "A Formal Verification Methodology to lower adoption barriers for Formal Verification of ASIC and FPGA designs in the Space sector"
authors = ["Hipolito Guzman <hguzman@us.es>"]
license = "To Be Determined"
readme = "README.md"
homepage = "https://fvm.us.es"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"
rich = "^13.9.4"
junit-xml = "^1.9"
humanize = "^4.11.0"
pyyaml = "^6.0.2"
yamllint = "^1.35.1"
wavedrom = "^2.0.3.post3"
termcolor = "^2.5.0"
icecream = "^2.1.3"
pathlib = "^1.0.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.8"
pytest = "^8.3.3"
pylint = "^3.3.1"
pylint-exit = "^1.2.0"
poetry2setup = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
